# anie

./: .gitignore  .gitleaks.toml  AGENTS.md  Cargo.toml  Makefile  README.md  code_review_comprehensive_2026-04-23.md  local_mitigations.md  tmp.md
.github/workflows/: ci.yml  secret-scan.yml
crates/anie-agent/: Cargo.toml
crates/anie-agent/src/: agent_loop.rs  failure_loop.rs  hooks.rs  lib.rs  recurse.rs  recurse_depth.rs  tests.rs  tool.rs
crates/anie-agent/tests/: agent_loop_behavior.rs  agent_loop_policy.rs  agent_loop_step_machine.rs
crates/anie-auth/: Cargo.toml
crates/anie-auth/src/: anthropic_oauth.rs  callback.rs  github_copilot_oauth.rs  google_antigravity_oauth.rs  google_gemini_cli_oauth.rs  lib.rs  oauth.rs  openai_codex_oauth.rs  refresh.rs  store.rs
crates/anie-cli/: Cargo.toml
crates/anie-cli/skills/: cpp-rule-of-five.md  decompose-multi-constraint-task.md  use-recurse-for-archive-lookup.md  verify-after-edit.md
crates/anie-cli/src/: bg_embedder.rs  bg_summarizer.rs  bootstrap.rs  commands.rs  compaction.rs  compaction_gate.rs  compaction_reserve.rs  compaction_stats.rs  context_virt.rs  controller.rs  controller_tests.rs  decompose.rs  embedder.rs  external_context.rs  harness_mode.rs  interactive_mode.rs  lib.rs  login_command.rs  main.rs  model_catalog.rs  models_command.rs  onboarding.rs  parallel_decompose.rs  print_mode.rs  recurse_factory.rs  recurse_provider.rs  retry_policy.rs  rpc.rs  runtime_state.rs  skill_tool.rs  skills.rs  user_error.rs
crates/anie-cli/src/runtime/: config_state.rs  mod.rs  prompt_cache.rs  session_handle.rs
crates/anie-config/: Cargo.toml
crates/anie-config/src/: lib.rs  mutation.rs
crates/anie-extensions/: Cargo.toml
crates/anie-extensions/src/: lib.rs
crates/anie-integration-tests/: Cargo.toml
crates/anie-integration-tests/src/: helpers.rs  lib.rs
crates/anie-integration-tests/tests/: agent_session.rs  agent_tui.rs  config_wiring.rs  provider_replay.rs  session_resume.rs
crates/anie-protocol/: Cargo.toml
crates/anie-provider/: Cargo.toml
crates/anie-provider/src/: api_kind.rs  error.rs  lib.rs  mock.rs  model.rs  options.rs  provider.rs  registry.rs  tests.rs  thinking.rs
crates/anie-providers-builtin/: Cargo.toml
crates/anie-providers-builtin/src/: anthropic.rs  http.rs  lib.rs  local.rs  model_discovery.rs  models.rs  openai.rs  openrouter.rs  sse.rs  tool_schema.rs  util.rs
crates/anie-providers-builtin/src/ollama_chat/: convert.rs  mod.rs  ndjson.rs  streaming.rs
crates/anie-providers-builtin/src/openai/: convert.rs  mod.rs  reasoning_strategy.rs  streaming.rs  tagged_reasoning.rs
crates/anie-session/: Cargo.toml
crates/anie-session/src/: lib.rs
crates/anie-tools/: Cargo.toml
crates/anie-tools-web/: Cargo.toml
crates/anie-tools-web/examples/: smoke.rs
crates/anie-tools-web/src/: error.rs  lib.rs
crates/anie-tools-web/src/read/: extract.rs  fetch.rs  frontmatter.rs  headless.rs  mod.rs  tool.rs
crates/anie-tools-web/src/search/: ddg.rs  mod.rs  tool.rs
crates/anie-tools-web/tests/: fetch_basic.rs
crates/anie-tools/src/: bash.rs  edit.rs  file_mutation_queue.rs  find.rs  grep.rs  lib.rs  ls.rs  read.rs  recurse.rs  shared.rs  tests.rs  write.rs
crates/anie-tui/: Cargo.toml
crates/anie-tui/benches/: tui_render.rs
crates/anie-tui/src/: app.rs  commands.rs  input.rs  lib.rs  model_picker.rs  onboarding.rs  output.rs  overlay.rs  providers.rs  render_debug.rs  terminal.rs  terminal_capabilities.rs  tests.rs
crates/anie-tui/src/autocomplete/: command.rs  mod.rs  popup.rs
crates/anie-tui/src/markdown/: layout.rs  link.rs  mod.rs  parser.rs  syntax.rs  theme.rs
crates/anie-tui/src/overlays/: hotkeys.rs  mod.rs  model_picker.rs  oauth.rs  onboarding.rs  providers.rs  session_picker.rs  settings.rs  theme_picker.rs  tree.rs
crates/anie-tui/src/widgets/: fuzzy.rs  mod.rs  panel.rs  select_list.rs  text_field.rs
docs/: IMPLEMENTATION_ORDER.md  IMPLEMENTATION_ORDER_V_1_0_1.md  README.md  ROADMAP.md  anie-rs_architecture.md  anie-rs_build_doc.md  anie_vs_pi_comparison.md  code_review_2026-04-27.md  compat_system_plan.md  implementation_roadmap_2026-04-27.md  integration_testing_plan.md  local_small_model_harness_ideas.md  onboarding-and-keyring.md  project_review_2026-04-17.md  refactor_worklist_2026-04-22.md  repl_agent_loop_2026-04-27.md  runtime_state_integration_plan.md  shell_escape_proposal.md  small_model_capability_ideas_2026-04-29.md  smoke_protocol_2026-05-01.md  status_report_2026-04-15.md  tui_input_responsiveness_fix_plan.md  v1-0-1_review.md  v1_0_milestone_checklist.md
docs/active_input_2026-04-27/: 01_editable_active_draft.md  02_queued_followups.md  03_interrupt_and_send.md  README.md
docs/add_providers/: 00_provider_selection_ux.md  01_openrouter.md  02_openai_compat_batch.md  03_google_gemini.md  04_openai_responses_api.md  05_azure_openai.md  06_amazon_bedrock.md  README.md  pi_comparison.md
docs/api_integrity_plans/: 01c_serializer_and_sanitizer.md  01d_migration_test.md  01e_rollout_status.md  02_anthropic_redacted_thinking.md  03_roundtrip_fidelity_audit.md  03c_replay_capabilities.md  03d_cross_provider_invariants.md  04_replay_error_taxonomy.md  06_integration_tests_multi_turn.md
docs/arch/: anie-rs_architecture.md  codex_architecture_report.md  codex_summary.md  credential_resolution.md  onboarding_flow.md  pi_summary.md
docs/code_consolidation_2026-04-26/: 00_findings.md  01_safe_wins.md  02_tui_render_consolidation.md  03_markdown_simplification.md  04_provider_streaming.md  05_oauth_deduplication.md  README.md
docs/code_review_2026-04-24/: 01_oauth_refresh_async_lock.md  02_openai_structured_images.md  03_retry_state_consistency.md  04_oauth_callback_deadlines.md  05_anthropic_truncation_classification.md  06_runtime_state_persistence_visibility.md  07_atomic_write_hardening.md  08_tool_resource_caps.md  09_tui_event_drain_bounds.md  10_repo_hygiene_ci.md  README.md
docs/code_review_2026-04-27/: 01_repo_formatting_ci.md  02_ui_config_loading.md  03_web_ssrf_redirect_boundary.md  05_streaming_read_cap.md  (+5 more)
src/: main.rs
(+259 files in other folders)
