[workspace]
resolver = "2"
members = [
    "crates/anie-protocol",
    "crates/anie-provider",
    "crates/anie-providers-builtin",
    "crates/anie-agent",
    "crates/anie-tools",
    "crates/anie-tools-web",
    "crates/anie-session",
    "crates/anie-config",
    "crates/anie-auth",
    "crates/anie-tui",
    "crates/anie-cli",
    "crates/anie-integration-tests",
]
default-members = ["crates/anie-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danielmriley/anie"

[workspace.dependencies]
# External
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dashmap = "6"
dirs = "6"
eventsource-stream = "0.2"
fs4 = "0.13"
futures = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
regex = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
# syntect: no default features (dropping onig, yaml-rust, plist-load)
# so we avoid the `onig` C dependency. `default-fancy` uses the
# pure-Rust `fancy-regex` engine instead.
syntect = { version = "5", default-features = false, features = ["default-fancy", "parsing"] }
jsonschema = "0.30"
keyring = "3"
nix = { version = "0.30", features = ["signal", "process"] }
# opener — cross-platform "open this URL in the default
# browser" for the OAuth login flow. Pure-Rust wrapper around
# `xdg-open`/`open`/`start`; no heavy transitive deps.
opener = { version = "0.8", default-features = false }
rand = "0.9"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
rpassword = "7"
# sha2 — needed for PKCE SHA-256 challenge in the OAuth flow.
# Pure Rust; no C build dep. Stable and pinned widely.
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
# serde_urlencoded — already transitive through reqwest; we
# surface it explicitly for the OAuth authorize-URL builder.
serde_urlencoded = "0.7"
serde_json = "1"
similar = "2"
temp-env = { version = "0.3", features = ["async_closure"] }
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
which = "8"
# Web-tool deps (used by anie-tools-web; declared at workspace
# scope so test crates and benches can pin the same versions).
governor = "0.6"
texting_robots = "0.2"
url = "2"
urlencoding = "2"
httpmock = "0.7"

# Internal
anie-agent = { path = "crates/anie-agent" }
anie-auth = { path = "crates/anie-auth" }
anie-cli = { path = "crates/anie-cli" }
anie-config = { path = "crates/anie-config" }
anie-provider = { path = "crates/anie-provider" }
anie-protocol = { path = "crates/anie-protocol" }
anie-providers-builtin = { path = "crates/anie-providers-builtin" }
anie-session = { path = "crates/anie-session" }
anie-tools = { path = "crates/anie-tools" }
anie-tools-web = { path = "crates/anie-tools-web" }
anie-tui = { path = "crates/anie-tui" }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
needless_borrow = "deny"
redundant_clone = "deny"
uninlined_format_args = "deny"
manual_let_else = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "z"
panic = "abort"
