[package]
name = "anie-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
anie-provider.workspace = true
anie-protocol.workspace = true

[dev-dependencies]
async-stream.workspace = true
anie-provider = { workspace = true, features = ["mock"] }
