[package]
name = "anie-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anie-config.workspace = true
anie-provider.workspace = true
anie-protocol.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
