[package]
name = "anie-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["keyring-native"]
keyring-native = ["dep:keyring"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
dirs.workspace = true
keyring = { workspace = true, optional = true, features = ["apple-native", "windows-native", "linux-native"] }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
anie-config.workspace = true
anie-provider.workspace = true
anie-protocol.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
wiremock = "0.6"
