[package]
name = "anie-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "anie"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Default build includes the web tools (web_read).
# Compile out via `--no-default-features` when targeting
# a lean build that doesn't need network reading.
default = ["web"]
web = ["dep:anie-tools-web"]
# Opt into the headless Chrome render path used by
# `web_read(javascript=true)`. Pulls in chromiumoxide; users
# who don't need SPA support can stay on the default `web`.
web-headless = ["web", "anie-tools-web/headless"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
opener.workspace = true
dirs.workspace = true
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
rpassword.workspace = true
anie-agent.workspace = true
anie-auth.workspace = true
anie-config.workspace = true
anie-provider.workspace = true
anie-protocol.workspace = true
anie-providers-builtin.workspace = true
anie-session.workspace = true
anie-tools.workspace = true
anie-tools-web = { workspace = true, optional = true }
anie-tui.workspace = true

[dev-dependencies]
tempfile.workspace = true
temp-env.workspace = true
httpmock.workspace = true
anie-provider = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["test-util"] }
