[package]
name = "anie-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
anie-provider.workspace = true

[dev-dependencies]
tempfile.workspace = true
