[package]
name = "anie-extensions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
anie-agent.workspace = true
anie-protocol.workspace = true
