[package]
name = "anie-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
fs4.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
anie-provider.workspace = true
anie-protocol.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tokio.workspace = true
anie-provider = { workspace = true, features = ["mock"] }
