[package]
name = "anie-tools-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Optional headless Chrome path for `javascript: true` rendering.
# Pulls in chromiumoxide; opt in only if you need SPA support.
headless = []

[dependencies]
anie-agent.workspace = true
anie-protocol.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
governor.workspace = true
reqwest = { workspace = true, features = ["gzip", "brotli"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
texting_robots.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
which.workspace = true

[dev-dependencies]
httpmock.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
