[package]
name = "anie-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
dashmap.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
nix.workspace = true
serde_json.workspace = true
similar.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
which.workspace = true
anie-agent.workspace = true
anie-protocol.workspace = true

[dev-dependencies]
anie-provider = { workspace = true, features = ["mock"] }
