[package]
name = "anie-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
anie-protocol.workspace = true
