[package]
name = "anie-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arboard = "3"
crossterm.workspace = true
futures.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
syntect.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
anie-auth.workspace = true
anie-config.workspace = true
anie-provider.workspace = true
anie-protocol.workspace = true
anie-providers-builtin.workspace = true

[dev-dependencies]
tempfile.workspace = true
